package Data;

public interface Observer {

    void update(CoffeeMachineController2 cm);
}
