package Data;

import java.util.ArrayList;

public interface Subject {


}
